# bsc

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  COPYING  DEVELOP.md  Dockerfile  GNUmakefile  INSTALL.md  LICENSE  Makefile  Makefile.cabal  README.md  Setup.hs  Vagrantfile  bsc.cabal  cabal.project  configure  execution-times  flake.nix  platform.mk  platform.sh
LICENSES/: LICENSE.cudd  LICENSE.fst  LICENSE.ghc  LICENSE.hbc  LICENSE.itcltk  LICENSE.parsec  (+2 more)
src/tcltk/itcl3.4/: .gitignore  Makefile.bluespec  Makefile.in  aclocal.m4  configure  configure.in  itclConfig.sh.in  pkgIndex.tcl.in
src/tcltk/itcl3.4/doc/: Class.3  List.3  Object.3  Preserve.3  RegisterC.3  Stack.3  body.n  class.n  code.n  configbody.n  delete.n  ensemble.n  find.n  is.n  itcl.n  itclvars.n  local.n  scope.n
src/tcltk/itcl3.4/generic/: itcl.decls  itcl.h  itclDecls.h  itclInt.decls  itclInt.h  itclIntDecls.h  itclStubInit.c  itclStubLib.c  itcl_bicmds.c  itcl_class.c  itcl_cmds.c  itcl_ensemble.c  itcl_linkage.c  itcl_methods.c  itcl_migrate.c  itcl_objects.c  itcl_parse.c  itcl_util.c
src/tcltk/itcl3.4/tests/: all.tcl  basic.test  body.test  chain.test  delete.test  ensemble.test  import.test  info.test  inherit.test  interp.test  local.test  methods.test  mkindex.test  namespace.test  protection.test  scope.test
src/tcltk/itcl3.4/tests/old/: AAA.test  Bar.tcl  BarFoo.tcl  Baz.tcl  Foo.tcl  FooBar.tcl  Geek.tcl  Mongrel.tcl  VirtualErr.tcl  all  basic.test  inherit.test  tclIndex  testlib.tcl  toaster.test  uplevel.test  upvar.test
src/tcltk/itcl3.4/tests/old/toasters/: Appliance.tcl  Hazard.tcl  Outlet.tcl  SmartToaster.tcl  Toaster.tcl  tclIndex  usualway.tcl
src/tcltk/itcl3.4/win/: makefile.vc
src/tcltk/itcl3.4/win/rc/: itcl.rc
src/tcltk/itk3.4/: .cvsignore  .gitignore  Makefile.bluespec  Makefile.in  configure  configure.in  itkConfig.sh.in  pkgIndex.tcl.in
src/tcltk/itk3.4/demos/: README  itkedit
src/tcltk/itk3.4/doc/: Archetype.n  Toplevel.n  Widget.n  itk.n  itkvars.n  usual.n
src/tcltk/itk3.4/examples/: Info.itk  MessageInfo.itk  README  TextDisplay.itk  TextInfo.itk  tclIndex  viewfile
src/tcltk/itk3.4/generic/: itk.decls  itk.h  itkDecls.h  itkStubInit.c  itkStubLib.c  itk_archetype.c  itk_cmds.c  itk_option.c  itk_util.c
src/tcltk/itk3.4/tests/: all  all.tcl  defs  interp.test  option.test  privacy.test  public.test  toplevel.test  widget.test
src/tcltk/itk3.4/win/: .cvsignore  dllEntryPoint.c  makefile.vc  nmakehlp.c
src/tcltk/itk3.4/win/rc/: itk.rc
src/tcltk/tcltk8.5.4/tcl8.5.4/unix/: .gitignore  Makefile.bluespec  Makefile.in  README  configure  configure.in  installManPage  ldAix  tcl.m4  tcl.spec  tclAppInit.c  tclConfig.h.in  tclConfig.sh.in  tclLoadDl.c  tclLoadDyld.c  tclLoadNext.c  tclLoadOSF.c  tclLoadShl.c  tclUnixChan.c  tclUnixCompat.c  tclUnixEvent.c  tclUnixFCmd.c  tclUnixFile.c  tclUnixInit.c  tclUnixNotfy.c  tclUnixPipe.c  tclUnixSock.c  tclUnixTest.c  tclUnixThrd.c  tclUnixTime.c  tclXtNotify.c  tclXtTest.c
src/tcltk/tcltk8.5.4/tcl8.5.4/unix/dltest/: Makefile.in  README  pkga.c  pkgb.c  pkgc.c  pkgd.c  pkge.c  pkgua.c
src/tcltk/tcltk8.5.4/tk8.5.4/macosx/: GNUmakefile  README  Tk-Info.plist.in  Wish-Common.xcconfig  Wish-Debug.xcconfig  Wish-Info.plist.in  Wish-Release.xcconfig  configure  configure.ac  tkAboutDlg.r  tkMacOSX.h  tkMacOSXAETE.r  tkMacOSXBitmap.c  tkMacOSXButton.c  tkMacOSXCarbonEvents.c  tkMacOSXClipboard.c  tkMacOSXColor.c  tkMacOSXConfig.c  tkMacOSXCursor.c  tkMacOSXCursors.r  tkMacOSXDebug.c  tkMacOSXDebug.h  tkMacOSXDefault.h  tkMacOSXDialog.c  tkMacOSXDraw.c  tkMacOSXEmbed.c  tkMacOSXEntry.c  tkMacOSXEvent.c  tkMacOSXEvent.h  tkMacOSXFont.c  tkMacOSXFont.h  tkMacOSXHLEvents.c  tkMacOSXInit.c  tkMacOSXInt.h  tkMacOSXKeyEvent.c  tkMacOSXKeyboard.c  tkMacOSXMenu.c  tkMacOSXMenubutton.c  tkMacOSXMenus.c  tkMacOSXMouseEvent.c  (+15 more)
src/tcltk/tcltk8.5.4/tk8.5.4/macosx/Wish.pbproj/: project.pbxproj
src/tcltk/tcltk8.5.4/tk8.5.4/macosx/Wish.xcode/: default.pbxuser  project.pbxproj
src/tcltk/tcltk8.5.4/tk8.5.4/macosx/Wish.xcodeproj/: default.pbxuser  project.pbxproj
src/tcltk/tcltk8.5.4/tk8.5.4/unix/: .gitignore  Makefile.bluespec  Makefile.in  README  configure  configure.in  install-sh  installManPage  tk.spec  tkConfig.h.in  tkConfig.sh.in  tkUnix.c  tkUnix3d.c  tkUnixButton.c  tkUnixColor.c  tkUnixConfig.c  tkUnixCursor.c  tkUnixDefault.h  tkUnixDialog.c  tkUnixDraw.c  tkUnixEmbed.c  tkUnixEvent.c  tkUnixFocus.c  tkUnixFont.c  tkUnixInit.c  tkUnixInt.h  tkUnixKey.c  tkUnixMenu.c  tkUnixMenubu.c  tkUnixPort.h  tkUnixRFont.c  tkUnixScale.c  tkUnixScrlbr.c  tkUnixSelect.c  tkUnixSend.c  tkUnixWm.c  tkUnixXId.c
util/bbt/: .gitignore  CONTRIBUTING.md  Makefile  README.md  bbt.cabal  cabal.project
util/bbt/app/: Main.hs
util/bbt/src/Language/Bluespec/BBT/: Build.hs  Config.hs  Discover.hs  Doc.hs  LspInfo.hs  New.hs  Project.hs  Sim.hs
util/docgen/: .gitignore  CONTRIBUTING.md  README.md  bs-docgen.cabal  cabal.project  docgen.cabal
util/docgen/app/: Main.hs
util/docgen/data/: docgen.css  search.js
util/docgen/src/Language/Bluespec/DocGen/: CSS.hs  DocAST.hs  Extract.hs  Generate.hs  HTML.hs  Highlight.hs  JS.hs  PlainParser.hs  RefManual.hs  SymbolIndex.hs  TexParser.hs
util/lsp/bs-lsp/: .gitignore  CONTRIBUTING.md  README.md  bs-lsp.cabal  cabal.project  cabal.project.freeze
util/lsp/bs-lsp/app/: Main.hs
util/lsp/bs-lsp/src/Language/Bluespec/LSP/: Completion.hs  Debug.hs  Definition.hs  Diagnostics.hs  Handlers.hs  Hover.hs  Server.hs  State.hs  SymbolTable.hs  Symbols.hs  TypeEnv.hs  Util.hs
util/lsp/bs-lsp/test/: TestPreludeHang.py
util/lsp/bs-lsp/test/Language/Bluespec/LSP/: BsvDefinitionSpec.hs  DefinitionSpec.hs
util/lsp/bs-parser/: CONTRIBUTING.md  README.md  bs-parser.cabal
util/lsp/bs-parser/app/: Main.hs
util/lsp/bs-parser/docs/: CSyntax.hs
util/lsp/bs-parser/src/Language/Bluespec/: Fixity.hs  Layout.hs  Lexer.hs  Parser.hs  Position.hs  Pretty.hs  Syntax.hs
util/lsp/bs-parser/src/Language/Bluespec/BSV/: Parser.hs
util/lsp/bs-parser/test/: Spec.hs
(+12885 files in other folders)
