cabal-version: 2.4
name: bsc
version: 0.1.0.0
synopsis: Bluespec Compiler
description: A compiler for the Bluespec hardware description language.
category: Hardware
license: BSD-3-Clause
license-file: LICENSE.txt
author: Bluespec, Inc.
maintainer: cabal-devel@haskell.org
build-type: Make
tested-with: GHC==9.2.7, GHC==9.4.7, GHC==9.6.3

extra-source-files:
    README.md
    INSTALL.md
    DEVELOP.md
    platform.mk
    platform.sh
    GNUmakefile

custom-setup
  setup-depends:
    base >= 4.8 && < 5,
    Cabal >= 3.0.0.0,
    directory >= 1.0,
    filepath >= 1.0

flag debug
  description: Enable debug output
  default: False
  manual: True

library
  hs-source-dirs: src/comp, src/Parsec
  exposed-modules:
    Util
    Position
    Id
    TCheck
    Type
    Subst
    VerilogDollar
    Prim
    Pragma
    StdPrel
    Synthesize
    Verilog
  other-modules:
    Util

  build-depends:
    base >= 4.8 && < 5,
    containers,
    array,
    mtl,
    unix,
    regex-compat,
    bytestring,
    directory,
    process,
    filepath,
    time,
    old-time,
    old-locale,
    split,
    syb,
    integer-gmp,
    text

  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-unused-matches

executable bsc
  hs-source-dirs: src/comp
  main-is: bsc.hs
  other-modules:
    Util
    Id
  build-depends:
    base >= 4.8 && < 5,
    bsc,
    containers,
    array,
    mtl,
    unix,
    regex-compat,
    bytestring,
    directory,
    process,
    filepath,
    time,
    old-time,
    old-locale,
    split,
    syb,
    integer-gmp,
    text
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-unused-matches

test-suite bsc-tests
  type: exitcode-stdio-1.0
  main-is: test_list.sh
  build-depends:
    base >= 4.8 && < 5,
    bsc,
    process
  default-language: Haskell2010
  hs-source-dirs: testsuite 