cabal-version:      3.0
name:               bs-lsp
version:            0.1.0.0
synopsis:           Language Server Protocol implementation for Bluespec Classic
description:        An LSP server for Bluespec Classic (.bs) files, providing diagnostics,
                    go-to-definition, hover, and document symbols.
license:            BSD-3-Clause
author:             matx-2 team
maintainer:         team@example.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
                 -Werror=incomplete-patterns

library
    import:           warnings
    exposed-modules:
        Language.Bluespec.LSP.Server
        Language.Bluespec.LSP.State
        Language.Bluespec.LSP.Handlers
        Language.Bluespec.LSP.Diagnostics
        Language.Bluespec.LSP.SymbolTable
        Language.Bluespec.LSP.Hover
        Language.Bluespec.LSP.Definition
        Language.Bluespec.LSP.Completion
        Language.Bluespec.LSP.Symbols
        Language.Bluespec.LSP.TypeEnv
        Language.Bluespec.LSP.Util
    build-depends:
        base >= 4.17 && < 5
      , bs-parser
      , lsp >= 2.4
      , lsp-types >= 2.3
      , containers >= 0.6
      , text >= 2.0
      , mtl >= 2.3
      , stm >= 2.5
      , aeson >= 2.0
      , filepath >= 1.4
      , directory >= 1.3
      , megaparsec >= 9.0
      , co-log-core >= 0.3
      , lens >= 5.0
      , lens-aeson >= 1.2
      , unordered-containers >= 0.2
      , hashable >= 1.4
      , process >= 1.6
      , bytestring >= 0.11
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        GeneralizedNewtypeDeriving
        LambdaCase
        OverloadedStrings
        RecordWildCards
        StrictData

executable bs-lsp
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    build-depends:
        base >= 4.17 && < 5
      , bs-lsp
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        RecordWildCards

test-suite bs-lsp-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Language.Bluespec.LSP.DefinitionSpec
    build-depends:
        base >= 4.17 && < 5
      , bs-lsp
      , bs-parser
      , hspec >= 2.10
      , text >= 2.0
      , lsp-types >= 2.3
      , containers >= 0.6
      , directory >= 1.3
      , filepath >= 1.4
    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RecordWildCards
