cabal-version:      3.0
name:               bs-parser
version:            0.1.0.0
synopsis:           Parser for Bluespec Classic (.bs) files
description:        A Haskell parser for Bluespec Classic syntax with pretty-printing support.
license:            BSD-3-Clause
author:             matx-2 team
maintainer:         team@example.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
                 -Werror=incomplete-patterns

library
    import:           warnings
    exposed-modules:
        Language.Bluespec.Lexer
        Language.Bluespec.Layout
        Language.Bluespec.Parser
        Language.Bluespec.Position
        Language.Bluespec.Pretty
        Language.Bluespec.Syntax
        Language.Bluespec.BSV.Parser
    build-depends:
        base >= 4.17 && < 5
      , containers >= 0.6
      , filepath >= 1.4
      , megaparsec >= 9.0
      , mtl >= 2.3
      , parser-combinators >= 1.3
      , prettyprinter >= 1.7
      , text >= 2.0
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        GeneralizedNewtypeDeriving
        LambdaCase
        OverloadedStrings
        RecordWildCards
        StrictData

executable bs-parser
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5
      , bs-parser
      , filepath >= 1.4
      , megaparsec >= 9.0
      , optparse-applicative >= 0.18
      , prettyprinter >= 1.7
      , text >= 2.0
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        RecordWildCards

test-suite bs-parser-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:
        base >= 4.17 && < 5
      , bs-parser
      , directory >= 1.3
      , filepath >= 1.4
      , hspec >= 2.10
      , megaparsec >= 9.0
      , text >= 2.0
    hs-source-dirs:   test
    default-language: GHC2021
